Partial_14Dec2021/force-app/main/default/objects/Meetings__c/Meetings__c.object-meta.xml
<CustomObject>
    <label>Meetings</label>
    <nameField>
        <displayFormat>M-{000}</displayFormat>
        <label>Meeting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>