Partial_14Dec2021/force-app/main/default/objects/Meetings__c/fields/agenda__c.field-meta.xml
<CustomField>
    <fullName>agenda__c</fullName>
    <label>Agenda</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>