Partial_14Dec2021/force-app/main/default/objects/Meetings__c/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <description>Unique meeting code</description>
    <inlineHelpText>Use alphanumeric text</inlineHelpText>
    <label>Meeting attendance code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>