Partial_14Dec2021/force-app/main/default/objects/Meetings__c/fields/Meeting_City__c.field-meta.xml
<CustomField>
    <fullName>Meeting_City__c</fullName>
    <label>Meeting City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>