Partial_14Dec2021/force-app/main/default/objects/Meetings__c/fields/Meeting_Description__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Description__c</fullName>
    <label>Meeting Description</label>
    <type>TextArea</type>
</CustomField>