Partial_14Dec2021/force-app/main/default/objects/Meetings__c/fields/Meeting_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_End_Time__c</fullName>
    <label>Meeting End Time</label>
    <type>DateTime</type>
</CustomField>