Partial_14Dec2021/force-app/main/default/objects/Meetings__c/fields/Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location__c</fullName>
    <label>Meeting Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>