Partial_14Dec2021/force-app/main/default/objects/Meetings__c/fields/Meeting_State__c.field-meta.xml
<CustomField>
    <fullName>Meeting_State__c</fullName>
    <label>Meeting State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>