Partial_14Dec2021/force-app/main/default/objects/Meetings__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mini Meet</fullName>
            </value>
            <value>
                <fullName>Mega Meet</fullName>
            </value>
            <value>
                <fullName>Vikaas Awards</fullName>
            </value>
            <value>
                <fullName>Wives Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>