Partial_14Dec2021/force-app/main/default/objects/Meetings__c/fields/Plumber_Club__c.field-meta.xml
<CustomField>
    <fullName>Plumber_Club__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plumber club</label>
    <referenceTo>Plumber_club__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>