Partial_14Dec2021/force-app/main/default/objects/Meetings__c/fields/Registration_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_End_Date__c</fullName>
    <label>Registration End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>