Partial_14Dec2021/force-app/main/default/objects/Meetings__c/fields/SurveyForThisMeeting__c.field-meta.xml
<CustomField>
    <fullName>SurveyForThisMeeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee Survey Form</label>
    <referenceTo>Attendee_Survey_Form__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>