Partial_14Dec2021/force-app/main/default/objects/Meetings__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>