Partial_14Dec2021/force-app/main/default/objects/Meetings__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plumbing Contractor</fullName>
                <default>true</default>
                <label>Plumbing Contractor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>