Partial_14Dec2021/force-app/main/default/objects/Meetings__c/recordTypes/Mini_Meet.recordType-meta.xml
<RecordType>
    <fullName>Mini_Meet</fullName>
    <active>true</active>
    <label>Mini Meet</label>
</RecordType>