Partial_14Dec2021/force-app/main/default/objects/Meetings__c/validationRules/end_date_today.validationRule-meta.xml
<ValidationRule>
    <fullName>end_date_today</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() || ISCHANGED( Meeting_End_Time__c )) &amp;&amp; 
(DATEVALUE(Meeting_End_Time__c) &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>Meeting_End_Time__c</errorDisplayField>
    <errorMessage>Please enter a end date greater than today</errorMessage>
</ValidationRule>