Partial_14Dec2021/force-app/main/default/objects/Meetings__c/validationRules/start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() || ISCHANGED(Meeting_Start_Time__c)) &amp;&amp; 
(DATEVALUE(Meeting_Start_Time__c) &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>Meeting_Start_Time__c</errorDisplayField>
    <errorMessage>Please enter a start date greater than today</errorMessage>
</ValidationRule>