Partial_14Dec2021/force-app/main/default/objects/Meetings__c/validationRules/start_date_registration.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date_registration</fullName>
    <active>true</active>
    <errorConditionFormula>DATEVALUE(Meeting_Start_Time__c) &lt;= Registration_End_Date__c</errorConditionFormula>
    <errorDisplayField>Meeting_Start_Time__c</errorDisplayField>
    <errorMessage>Please enter a start date greater than registration end date</errorMessage>
</ValidationRule>