Partial_14Dec2021/force-app/main/default/objects/Meetings__c/validationRules/start_date_rend_date.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date_rend_date</fullName>
    <active>true</active>
    <errorConditionFormula>Meeting_Start_Time__c &gt;  Meeting_End_Time__c</errorConditionFormula>
    <errorDisplayField>Meeting_Start_Time__c</errorDisplayField>
    <errorMessage>Please enter a start date less than end date</errorMessage>
</ValidationRule>