Partial_14Dec2021/force-app/main/default/objects/Meetings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Meeting_Type__c</columns>
    <columns>Meeting_Start_Time__c</columns>
    <columns>Meeting_End_Time__c</columns>
    <columns>Plumber_Club__c</columns>
    <columns>Meeting_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>