Partial_14Dec2021/force-app/main/default/objects/Meetings__c/listViews/My_meeting.listView-meta.xml
<ListView>
    <fullName>My_meeting</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My meetings</label>
</ListView>